# model/team.js
@@ -1,0 +1,10 @@
+const mongoose = require('mongoose');
+
+const userSchema = mongoose.Schema({
+    teamName: String,
+    teamLeader: String,
+    teamProfile: String,
+    taskId: Number
+})
+
+module.exports = mongoose.model('Team', userSchema)
