# routes/teams.js
@@ -3,11 +3,13 @@ const router = express.Router();
 
 const teamsController = require('../controllers/teams');
 
-router.get('/', teamsController.getAll);
+router.get('/', teamsController.getTeams)
+
+router.get('/teams', teamsController.getTeams);
 
 router.get('/:id', teamsController.getSingle);
 
-router.post('/', teamsController.createTeam);
+router.post('/teams', teamsController.postTeam);
 
 router.put('/:id', teamsController.updateTeam);
 
